--- a/style.css
+++ b/style.css
@@ -31,3 +31,18 @@ h1 {
     max-width: 250px;
     max-height: 250px;
 }
+
+#gameOver {
+    top: 100px;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 125px;
+    border: 1px solid black;
+    border-radius: 8px;
+    color: red;
+    background-color: gray;
+    padding: 5px;
+    display: none;
+}
