--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ h1 {
     position: absolute;
     transform: translate(-50%, -50%);
     text-align: center;
-    width: 125px;
+    font-size: 20pt;
+    width: 200px;
     border: 1px solid black;
     border-radius: 8px;
     color: red;
