--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ html {
 h1 {
     text-align: center;
     margin-bottom: 0px;
+    font-size: 24pt;
+}
+
+h2 {
+    font-size: 20pt;
+}
+
+p {
+    font-size: 16pt;
 }
 
 #gameBoard {
@@ -29,7 +38,7 @@ button {
     background-color: lightblue;
     border: 1px solid black;
     border-radius: 8px;
-    font-size: 20pt;
+    font-size: 16pt;
     padding: 5px;
     margin: 5px;
 }
